cmake_minimum_required (VERSION "3.7.0")

message("")
message("****************************************")
message("**             ------------           **")
message("**           -   RVI2_WEB   -         **")
message("**             ------------           **")
message("****************************************")
message("")

project(rvi2_web LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# -- Take special care linking Boost libraries for Wt on Windows --
if(WIN32)
    set(Boost_NO_SYSTEM_PATHS ON)
    if(DEFINED ENV{BOOST_LIBRARYDIR})
        if(EXISTS $ENV{BOOST_LIBRARYDIR})
            message("Linking Boost libraries at $ENV{BOOST_LIBRARYDIR}")
            link_directories($ENV{BOOST_LIBRARYDIR})
        else()
            message(FATAL_ERROR "Directory defined by BOOST_LIBRARYDIR environment variable does not exist!")
        endif()        
    else()
        message(FATAL_ERROR "Windows based platforms must define BOOST_LIBRARYDIR environment variable!")
    endif()
endif()

option(RVI2_BUILD_SAMPLES "..." OFF)
option(RVI2_BUILD_TESTS	  "..." OFF)
option(RVI2_BUILD_COZY 	  "..." OFF)
option(RVI2_BUILD_NETLIB  "..." OFF)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY 			${PROJECT_BINARY_DIR}/output/lib/shared)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY 			${PROJECT_BINARY_DIR}/output/lib/static)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY 			${PROJECT_BINARY_DIR}/output/bin/no-category)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG 	${PROJECT_BINARY_DIR}/output/lib/shared)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG 	${PROJECT_BINARY_DIR}/output/lib/static)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG 	${PROJECT_BINARY_DIR}/output/bin/no-category)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE 	${PROJECT_BINARY_DIR}/output/lib/shared)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE 	${PROJECT_BINARY_DIR}/output/lib/static)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE 	${PROJECT_BINARY_DIR}/output/bin/no-category)

add_subdirectory("third-party")
add_subdirectory("lib")
add_subdirectory("bin")